# config-management-system

./: .gitignore
.github/workflows/: server-tests.yml
agent/: CMakeLists.txt  main.cpp
agent/.devcontainer/: Dockerfile  devcontainer.json
agent/grpc/: grpc_starter.cpp  grpc_starter.h  ping_service.h
agent/grpc/impl/: ping_service.cpp  ping_service.h
agent/proto/: ping.proto
server/: .gitignore  build.gradle.kts  build.number
server/.docker/java/dev/: Dockerfile
server/.docker/java/prod/: Dockerfile
server/scripts/: update-version.sh
server/src/main/kotlin/com/fyordo/cms/server/: ServerApplication.kt
server/src/main/kotlin/com/fyordo/cms/server/config/: RocksDBFactory.kt  SecurityConfig.kt
server/src/main/kotlin/com/fyordo/cms/server/config/props/: RaftConfiguration.kt  RocksDbConfig.kt
server/src/main/kotlin/com/fyordo/cms/server/dto/: RaftCommand.kt  Versioned.kt
server/src/main/kotlin/com/fyordo/cms/server/dto/grpc/: AgentId.kt  PropertyUpdateEvent.kt
server/src/main/kotlin/com/fyordo/cms/server/dto/property/: PropertyDto.kt  PropertyInternalDto.kt  PropertyKey.kt  PropertyValue.kt
server/src/main/kotlin/com/fyordo/cms/server/dto/query/: PropertyQueryFilter.kt
server/src/main/kotlin/com/fyordo/cms/server/dto/raft/: RaftCommand.kt  RaftResult.kt
server/src/main/kotlin/com/fyordo/cms/server/grpc/: AgentChannelGrpcService.kt  AgentCoordinationGrpcService.kt  AgentGrpcStreamListener.kt  PropertyUpdateBroadcaster.kt
server/src/main/kotlin/com/fyordo/cms/server/helper/: RaftCommandSerialization.kt
server/src/main/kotlin/com/fyordo/cms/server/rest/: PropertyController.kt  PropertyModificationController.kt  PropertyQueryController.kt  RaftController.kt
server/src/main/kotlin/com/fyordo/cms/server/serialization/: CommonSerialization.kt  PropertyKeySerialization.kt  RaftCommandSerialization.kt
server/src/main/kotlin/com/fyordo/cms/server/utils/: DefaultValues.kt
server/src/main/proto/: AgentChannelService.proto  AgentCoordinationService.proto
server/src/main/resources/: application-dev.properties  application-prod.properties
server/src/test/kotlin/com/fyordo/cms/server/helper/: RaftCommandSerializationTest.kt
server/src/test/kotlin/com/fyordo/cms/server/serialization/: CommonSerializationTest.kt
(+27 files in other folders)
